@@ -34,6 +34,12 @@ PHP                                                                        NEWS
 - MySQLi:
   . Fixed bug #79375 (mysqli_store_result does not report error from lock wait
     timeout). (Kamil Tekiela, Nikita)
+  . Fixed bug #76525 (mysqli::commit does not throw if MYSQLI_REPORT_ERROR
+    enabled and mysqlnd used). (Kamil Tekiela)
+
+- PDO MySQL:
+  . Fixed bug #66528 (No PDOException or errorCode if database becomes
+    unavailable before PDO::commit). (Nikita)
 
 29 Oct 2020, PHP 7.4.12
 
